--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     margin: 0 auto;
 }
 
+/* Nav Html */
+
 .hero{
     background-image: url('https://unsplash.com/photos/9z9fxr_7Z-k');
     height: 100vh;
@@ -30,4 +32,38 @@ body {
     text-align: center;
     position: relative;
     margin-bottom: 20px;
+    z-index: -2;
+}
+
+.hero::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+}
+
+.hero h1{
+    font-size: 50px;
+    margin: -20px 0 20px;
+}
+
+.hero p {
+   font-size: 20px;
+   letter-spacing: 1px;
+}
+
+.content h2,
+.content h3{
+    font-size: 150%;
+    margin: 10px 0;
+}
+
+.content p{
+    color: #555;
+    line-height: 30px;
+    letter-spacing: 1.2px;
 }
