--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 /* Nav Html */
 
 .nav{
+    background-image: 'tingey-injury-law-firm-S2rcAJbBxX0-unsplash.jpg';
     position: fixed;
     background-color: #222;
     top: 0;
@@ -68,8 +69,12 @@ nav ul{
     font-weight: bold;
 }
 
+img{
+    height: 50vh;
+}
+
 .hero{
-    background-image: url('https://unsplash.com/photos/9z9fxr_7Z-k');
+    background-image: 'tingey-injury-law-firm-S2rcAJbBxX0-unsplash.jpg';
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
